--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,108 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+alabaster==0.7.12
+arrow==0.14.3
+asn1crypto==0.24.0
+attrs==19.1.0
+awscli==1.16.207
+Babel==2.7.0
+backcall==0.1.0
+binaryornot==0.4.4
+bleach==3.1.0
+botocore==1.12.197
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+colorama==0.3.9
+cookiecutter==1.6.0
+coverage==4.5.3
+cryptography==2.7
+cycler==0.10.0
+decorator==4.4.0
+defusedxml==0.5.0
+docutils==0.15.1
+entrypoints==0.3
+flake8==3.7.8
+future==0.17.1
+idna==2.8
+imagesize==1.1.0
+ipykernel==5.1.1
+ipython==7.7.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.0
+jedi==0.14.1
+Jinja2==2.10.1
+jinja2-time==0.2.0
+jmespath==0.9.4
+joblib==0.13.2
+json5==0.8.5
+jsonschema==3.0.1
+jupyter-client==5.3.1
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+jupyterlab==1.0.4
+jupyterlab-server==1.0.0
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.5.0
+nbformat==4.4.0
+notebook==6.0.0
+numpy==1.16.4
+packaging==19.0
+pandas==0.25.0
+pandocfilters==1.4.2
+parso==0.5.1
+patsy==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
+plotly==4.0.0
+plotly-express==0.4.0
+poyo==0.5.0
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+pyasn1==0.4.5
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
+Pygments==2.4.2
+pyOpenSSL==19.0.0
+pyparsing==2.4.1.1
+pyrsistent==0.15.4
+PySocks==1.7.0
+pyspark==2.4.0
+python-dateutil==2.8.0
+python-dotenv==0.10.3
+pytz==2019.1
+PyYAML==5.1
+pyzmq==18.0.2
+qtconsole==4.5.2
+requests==2.22.0
+retrying==1.3.3
+rsa==3.4.2
+s3transfer==0.2.1
+scikit-learn==0.21.2
+scipy==1.3.0
+Send2Trash==1.5.0
+six==1.12.0
+snowballstemmer==1.9.0
+Sphinx==2.1.2
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+-e git+git@github.com:ecrespo/datadev.git@5e3145b51ab73f7c2514dae5da1d77ab0f818bd7#egg=src
+statsmodels==0.10.1
+terminado==0.8.2
+testpath==0.4.2
+tornado==6.0.3
+traitlets==4.3.2
+urllib3==1.25.3
+wcwidth==0.1.7
+webencodings==0.5.1
+whichcraft==0.6.0
+widgetsnbextension==3.5.0
